[package]
name = "numeric-float"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[features]
default = ["conv", "num", "rustc-serialize", "serde"]
deref = []

[dependencies]
conv = { version = "0.3.0", optional = true }
custom_derive = "0.1.2"
newtype_derive = "0.1.2"
num = { version = "0.1.27", optional = true }
rustc-serialize = { version = "0.3.16", optional = true }
serde = { version = "0.6.7", optional = true }
unreachable = "0.0.2"

[dev-dependencies]
ieee754 = "0.2.1"
itertools = "0.4.3"
serde_json = "0.6.0"
